fixed alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -531,7 +531,7 @@ section {
 
 .about p {
   margin: 15px 0 30px 0;
-  line-height: 24px;
+  line-height: 20px;
 }
 
 .about .btn-read-more {
